# mini-claw-code

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  README.vi.md  README.zh.md  package.json  tsconfig.base.json
mini-claw-code-py/: .gitignore  .mcp.json  .subagents.json  Makefile  poem.txt  pyproject.toml
mini-claw-code-py/.agents/: AGENTS.md
mini-claw-code-py/examples/: chat.py  cli.py  tui.py
mini-claw-code-py/outputs/: final_output.txt
mini-claw-code-py/prompts/: prompt.md
mini-claw-code-py/src/mini_claw_code_py/: __init__.py  agent.py  artifacts.py  config.py  context.py  control_plane.py  events.py  harness.py  mcp.py  memory.py  mock.py  planning.py  prompts.py  session.py  skills.py  streaming.py  subagent.py  subagent_profiles.py  surfaces.py  telemetry.py  todos.py  tool_universe.py  types.py  workspace.py
mini-claw-code-py/src/mini_claw_code_py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mini-claw-code-py/src/mini_claw_code_py/ops/: __init__.py  (+2 more)
mini-claw-code-py/tests/: test_ch1.py  test_ch10.py  test_ch11.py  test_ch12.py  test_ch13.py  test_ch14.py  test_ch15.py  test_ch18.py  test_ch19.py  test_ch2.py  test_ch20.py  test_ch21.py  test_ch22.py  test_ch23.py  test_ch24.py  test_ch25.py  test_ch26.py  test_ch27.py  test_ch28.py  test_ch29.py  test_ch3.py  test_ch30.py  test_ch31.py  test_ch32.py  test_ch33.py  test_ch34.py  test_ch35.py  test_ch37.py  test_ch38.py  test_ch39.py  test_ch4.py  test_ch40.py  test_ch41.py  test_ch42.py  test_ch43.py  test_ch44.py  test_ch45.py  test_ch46.py  test_ch47.py  test_ch48.py  (+5 more)
(+293 files in other folders)
